# research-planner-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
agentmesh/: README.md  pyproject.toml
agentmesh/agentmesh/: __init__.py  agent.py  convergence.py  mesh.py  message.py
agentmesh/agentmesh/memory/: __init__.py  local.py  shared.py
agentmesh/agentmesh/models/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py
agentmesh/agentmesh/tools/: __init__.py  base.py
agentmesh/examples/code_review/: review_team.py
agentmesh/examples/research/: research_team.py
agentmesh/examples/simple/: hello_mesh.py
agentmesh/tests/: test_agent.py  test_convergence.py  test_memory.py  test_mesh.py  test_message.py  test_tools.py
docs/: ARCHITECTURE.md  GENERIC_AGENT.md  MACOS_OPTIONAL.md  MAKE_LOCAL_CLAUDE_CODE_SETUP.md  MAKE_LOCAL_CODEX_SKILL.md  PLANNER_WORKFLOW.md  PRIVACY_BOUNDARY.md  QUICKSTART.md
integrations/macos/: cleanup_future_moved_calendar.swift  dashboard_launcher.applescript  export_events.swift  issue_logger.applescript
planner/: __init__.py  calendar_io.py  cli.py  config.py  dashboard.py  demo_assets.py  history.py  history_summary.py  planner_data.py  replan.py  report_parser.py  validate.py  workspace.py
schemas/: calendar_events.schema.json  constraints.schema.json  integrations.schema.json  plan_details.schema.json  project.schema.json  status_log.schema.json  workstreams.schema.json
tests/: test_calendar_io.py  test_cli.py  test_config.py  test_dashboard.py  test_history_summary.py  test_html_rendering.py  test_integration.py  test_planner_data.py  test_replan.py  test_report_parser.py  test_validate.py  test_workspace_and_history.py
(+34 files in other folders)
