[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-planner-template"
version = "0.1.0"
description = "Template repository for daily research planning, dashboards, and history summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[tool.setuptools.packages.find]
include = ["planner*"]
